# stateful_rag_l2

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
notebooks/: stateful_agent.ipynb
stateful_rag/: config.py
stateful_rag/agent/: graph.py  nodes.py  state.py
stateful_rag/cache/: redis_cache.py
stateful_rag/embeddings/: embedder.py
stateful_rag/ingestion/: chunker.py  loader.py
stateful_rag/llm/: provider.py
stateful_rag/memory/: pg_memory.py  summarizer.py
stateful_rag/observability/: langfuse_client.py
stateful_rag/vectorstore/: pgvector_store.py
ui/: app.py
